Setup required PLD entities for generating stock inquiry for quotations

--- a/readme
+++ b/readme
@@ -3,6 +3,10 @@ TODO:
 For asking:
     Request Sample
 
+Parked Development:
+    - Item Units of Measurement
+    - Locations
+
 Create Canvas 
 -> Generate Quotation Document 
 -> Send For Approval 
