Refactor client companies to just client

--- a/readme
+++ b/readme
@@ -1,3 +1,20 @@
+Apparent Modules From Flow
+
+Lead Handling
+    -> Sends Company Collateral
+    -> Client Tracker
+
+
+
+
+
+
+
+
+
+=============================================================================
+
+
 TODO:
 
 For asking:
